--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
         <link rel="stylesheet" href="assets/css/style.css">
-        <title>OnlyMangos.com</title>
+        <title>OnlyMangos</title>
     </head>
     <body>
         <div class="container">
